--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/png" href="/elements/logos/my-resell-white.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="/manifest.json" />
+    <title>My Resell</title>
+    <meta name="description" content="My Resell is a web application that allows you to manage your resell business. The user can manage their products, orders, customers, and suppliers. The user can also generate reports and manage their inventory."/>
+    <link rel="apple-touch-icon" href="/elements/favicon.png" />
+    <link rel="apple-touch-startup-image" href="/elements/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyResell" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="root"></div>
